# ibus-avro

./: .gitignore  .gitmodules  ANSIconverter.js  CNAME  CONTRIBUTING.md  Database.db3.bz2  MPL-1.1.txt  Makefile  Makefile.am  Makefile.in  README.md  README.md~  TODO.md  about.md  aclocal.m4  autocorrect.js  autocorrect.json  avrolib.js  avropref.ui  avroregexlib.js  blog.html  build.sh  build_avrov8.sh  build_fatv8.sh  build_lib.sh  build_v8.sh  candiate-selector.go  com.github.sarim.ibus.avro.metainfo.xml  com.omicronlab.avro.gschema.xml  config.status  configure  configure.ac  database-compiler.js  db.js  dbsearch.js  dictclient.js  dictdaemon.js  engine.c  engine.cpp  engine.go  (+38 more)
_includes/: social.html
_layouts/: blog_archive.html  blog_post.html  default.html  index.html  post.html
_plugins/: getversion.rb
_posts/: 2012-07-18-about.textile  2013-05-20-fix-key-expired-error.md  2013-09-05-sudden-not-working.md  2016-09-25-fix-arch-gnome-arabic.md  about.md
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
avro/: app.go  engine.go  factory.go  keysyms.go  utils.go
gbridge/: fake-context.cpp  fake-context.h  hello.js  main.c  main.cpp  meson.build  suggester.cpp  suggester.h  suggester.js  test-suggester.c
prefui/: README.md  gmain.vala  gschema.xml  meson.build
prefui/ui/: AvroPrefWindow.ui  gresources.xml
src/: engine.cpp  main.cpp
stylesheets/: archive.css  stylesheet.css
