#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([ibus-avro], [1.1], [sarim2005@gmail.com])
AM_INIT_AUTOMAKE(ibus-avro, 1.1)
AC_OUTPUT(Makefile)
# Checks for programs.

# Checks for libraries.
PKG_CHECK_MODULES(ibus, ibus-1.0)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
